nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: Hussein-service
  namespace: my-namespace
spec:
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
